Translate logging-sentry

--- a/i18n/po/ja_JP/_guides/logging-sentry.adoc.po
+++ b/i18n/po/ja_JP/_guides/logging-sentry.adoc.po
@@ -2,109 +2,94 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-15 23:25+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/logging-sentry.adoc:6
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Quarkus - Logging to Sentry"
-msgstr "Quarkus - セントリーへのロギング"
+msgstr "Quarkus - Sentryへのロギング"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:11
-#, fuzzy
 msgid "This guide explains how to configure Quarkus to log to Sentry."
-msgstr "このガイドでは、QuarkusがSentryにログインするように設定する方法を説明します。"
+msgstr "このガイドでは、QuarkusがSentryにログ送信するように設定する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_guides/logging-sentry.adoc:12
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Description"
 msgstr "説明"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:15
-#, fuzzy
-msgid ""
-"Sentry is a really easy way to be notified of errors happening in your "
-"Quarkus application."
+msgid "Sentry is a really easy way to be notified of errors happening in your Quarkus application."
 msgstr "Sentryは、Quarkusアプリケーションで発生したエラーを通知する本当に簡単な方法です。"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:17
-#, fuzzy
 msgid ""
-"It is a self-hosted and cloud-based error monitoring that helps software "
-"teams discover, triage, and prioritize errors in real-time."
+"It is a self-hosted and cloud-based error monitoring that helps software teams discover, triage, and prioritize errors in real-"
+"time."
 msgstr ""
-"セルフホスティング型のクラウドベースのエラーモニタリングで、ソフトウェアチームがリアルタイムでエラーを発見し、トリアージし、優先順位をつけるのに役立ちます。"
+"セルフホスト型か、クラウドベースのエラーモニタリングで、ソフトウェアチームがリアルタイムでエラーを発見し、トリアージし、優先順位"
+"をつけるのに役立ちます。"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:19
-#, fuzzy
-msgid ""
-"They offer a free starter price for cloud-based or you can self host it for "
-"free."
-msgstr "クラウドベースの場合はスターター価格を無料で提供してくれますし、セルフホストでも無料で利用できます。"
+msgid "They offer a free starter price for cloud-based or you can self host it for free."
+msgstr "クラウドベースの場合は無料のスターター価格を提供してくれますし、セルフホストでも無料で利用できます。"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:21
-#, fuzzy
 msgid ""
-"Sentry's Java SDK is open source, but recently sentry.io https://blog.sentry."
-"io/2019/11/06/relicensing-sentry[changed the license] for their backend to "
-"the non-open source https://github.com/getsentry/sentry/blob/master/"
-"LICENSE[BSL license]. This might or might not be an issue for your project "
-"and product."
+"Sentry's Java SDK is open source, but recently sentry.io https://blog.sentry.io/2019/11/06/relicensing-sentry[changed the "
+"license] for their backend to the non-open source https://github.com/getsentry/sentry/blob/master/LICENSE[BSL license]. This "
+"might or might not be an issue for your project and product."
 msgstr ""
-"Sentry の Java SDK はオープンソースですが、最近 sentry.io はバックエンドの link:https://blog.sentry."
-"io/2019/11/06/relicensing-sentry[ライセンスを]非オープンソースの link:https://github.com/"
-"getsentry/sentry/blob/master/LICENSE[BSL ライセンス]に link:https://blog.sentry.io/"
-"2019/11/06/relicensing-"
-"sentry[変更しました]。これはあなたのプロジェクトや製品にとって問題になるかもしれませんし、ならないかもしれません。"
+"Sentry の Java SDK はオープンソースですが、最近 sentry.io はバックエンドの link:https://blog.sentry.io/2019/11/06/relicensing-"
+"sentry[ライセンス] を非オープンソースの link:https://github.com/getsentry/sentry/blob/master/LICENSE[BSL ライセンス]に link:"
+"https://blog.sentry.io/2019/11/06/relicensing-sentry[変更しました]。これはあなたのプロジェクトや製品にとって問題になるかもしれま"
+"せんし、ならないかもしれません。"
 
 #. type: Title ==
 #: upstream/_guides/logging-sentry.adoc:22
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Configuration"
-msgstr "構成"
+msgstr "設定"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:25
-#, fuzzy
 msgid ""
-"To start with, you need to get a Sentry DSN either by https://sentry.io/"
-"signup/[creating a Sentry account] or https://docs.sentry.io/server/"
-"[installing your own self-hosted Sentry]."
+"To start with, you need to get a Sentry DSN either by https://sentry.io/signup/[creating a Sentry account] or https://docs."
+"sentry.io/server/[installing your own self-hosted Sentry]."
 msgstr ""
-"手始めに、Sentry link:https://sentry.io/signup/[アカウントを作成する]か、自前のSentry link:https:"
-"//docs.sentry.io/server/[をインストールして]Sentry DSNを取得する必要があります。"
+"手始めに、Sentry link:https://sentry.io/signup/[アカウントを作成する]か、自前のSentry link:https://docs.sentry.io/server/[をイン"
+"ストール] してSentry DSNを取得する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:28
-#, fuzzy
 msgid ""
-"In order to configure Sentry logging, add the `logging-sentry` extension to "
-"your project by running the following command in your project base directory:"
-""
+"In order to configure Sentry logging, add the `logging-sentry` extension to your project by running the following command in "
+"your project base directory:"
 msgstr ""
-"Sentry ロギングを設定するには、プロジェクトのベースディレクトリで以下のコマンドを実行して、 `logging-sentry` "
-"拡張モジュールをプロジェクトに追加します。"
+"Sentry ロギングを設定するには、プロジェクトのベースディレクトリで以下のコマンドを実行して、 `logging-sentry` エクステンションをプ"
+"ロジェクトに追加します："
 
 #. type: delimited block -
 #: upstream/_guides/logging-sentry.adoc:32
@@ -114,9 +99,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:35
-#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr "これにより、 `pom.xml`."
+msgstr "これにより、 `pom.xml` に以下が追加されます："
 
 #. type: delimited block -
 #: upstream/_guides/logging-sentry.adoc:42
@@ -130,31 +114,27 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/logging-sentry.adoc:45
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "“In Application” Stack Frames"
-msgstr "\"アプリケーション内」スタックフレーム"
+msgstr "\"in Application\" スタックフレーム"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:47
-#, fuzzy
 msgid ""
-"Sentry differentiates stack frames that are directly related to your "
-"application (“in application”) from stack frames that come from other "
-"packages such as the standard library, frameworks, or other dependencies. "
-"The difference is visible in the Sentry web interface where only the “in "
-"application” frames are displayed by default."
+"Sentry differentiates stack frames that are directly related to your application (“in application”) from stack frames that come "
+"from other packages such as the standard library, frameworks, or other dependencies. The difference is visible in the Sentry web "
+"interface where only the “in application” frames are displayed by default."
 msgstr ""
-"Sentry "
-"は、アプリケーションに直接関連するスタックフレーム（「アプリケーション内」）と、標準ライブラリやフレームワーク、その他の依存関係のあるパッケージから来るスタックフレームを区別します。この違いは、SentryのWebインタフェースでは、デフォルトでは\"in "
-"application\"フレームのみが表示されます。"
+"Sentry は、アプリケーションに直接関連するスタックフレーム（\"in application\"）と、標準ライブラリやフレームワーク、その他の依存関"
+"係のあるパッケージから来るスタックフレームを区別します。この違いは、SentryのWebインタフェースでは、デフォルトでは \"in "
+"application\" フレームのみが表示されます。"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:49
-#, fuzzy
 msgid ""
-"You can configure which package prefixes your application uses with the `in-"
-"app-packages` option, which takes a comma separated list of packages:"
-msgstr "`in-app-packages` オプションで、アプリケーションが使用するパッケージの接頭辞を設定できます。"
+"You can configure which package prefixes your application uses with the `in-app-packages` option, which takes a comma separated "
+"list of packages:"
+msgstr "`in-app-packages` オプションで、アプリケーションが使用するパッケージの接頭辞を設定できます："
 
 #. type: delimited block -
 #: upstream/_guides/logging-sentry.adoc:53
@@ -164,11 +144,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:56
-#, fuzzy
-msgid ""
-"If you don’t want to use this feature but want to disable the warning, "
-"simply set it to `*`:"
-msgstr "この機能を使用したくないが警告を無効にしたい場合は、 `*`."
+msgid "If you don’t want to use this feature but want to disable the warning, simply set it to `*`:"
+msgstr "この機能を使用したくないが警告を無効にしたい場合は、 `*` をセットしてください："
 
 #. type: delimited block -
 #: upstream/_guides/logging-sentry.adoc:60
@@ -178,20 +155,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/logging-sentry.adoc:62
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Example"
 msgstr "例"
 
 #. type: Block title
 #: upstream/_guides/logging-sentry.adoc:64
-#, no-wrap, fuzzy
-msgid ""
-"All errors and warnings occurring in any of the packages will be sent to "
-"Sentry with DSN `https://abcd@sentry.io/1234`"
-msgstr ""
-"いずれかのパッケージで発生したすべてのエラーや警告は、DSNでSentryに送信されます。 `&lt;a href=\"https://"
-"abcd@sentry.io/1234\" class=\"bare\"&gt;https://abcd@sentry.io/1234&lt;/"
-"a&gt;`"
+#, no-wrap
+msgid "All errors and warnings occurring in any of the packages will be sent to Sentry with DSN `https://abcd@sentry.io/1234`"
+msgstr "いずれかのパッケージで発生したすべてのエラーや警告は、DSNと共にSentryに送信されます。 `https://abcd@sentry.io/1234`"
 
 #. type: delimited block -
 #: upstream/_guides/logging-sentry.adoc:70
@@ -204,14 +176,9 @@ msgstr ""
 
 #. type: Block title
 #: upstream/_guides/logging-sentry.adoc:72
-#, no-wrap, fuzzy
-msgid ""
-"All errors occurring in the package `org.example` will be sent to Sentry "
-"with DSN `https://abcd@sentry.io/1234`"
-msgstr ""
-"パッケージ `org.example` で発生したすべてのエラーは、Sentry に DSN で送信されます。 `&lt;a href=\"https:/"
-"/abcd@sentry.io/1234\" class=\"bare\"&gt;https://abcd@sentry.io/1234&lt;/"
-"a&gt;`"
+#, no-wrap
+msgid "All errors occurring in the package `org.example` will be sent to Sentry with DSN `https://abcd@sentry.io/1234`"
+msgstr "パッケージ `org.example` で発生したすべてのエラーは、DSN と共にSentry に送信されます。 `https://abcd@sentry.io/1234`"
 
 #. type: delimited block -
 #: upstream/_guides/logging-sentry.adoc:79
@@ -225,14 +192,11 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/logging-sentry.adoc:81
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
 
 #. type: Plain text
 #: upstream/_guides/logging-sentry.adoc:84
-#, fuzzy
-msgid ""
-"This extension is configured through the standard `application.properties` "
-"file."
-msgstr "この拡張子は、標準の `application.properties` ファイルを介して設定されます。"
+msgid "This extension is configured through the standard `application.properties` file."
+msgstr "このエクステンションは、標準の `application.properties` ファイルを介して設定されます。"
