Translate blaze-persistence

--- a/i18n/po/ja_JP/_guides/blaze-persistence.adoc.po
+++ b/i18n/po/ja_JP/_guides/blaze-persistence.adoc.po
@@ -2,43 +2,42 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-16 10:52+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/blaze-persistence.adoc:6
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Quarkus - Using Blaze-Persistence"
-msgstr "Quarkus - ブレイズパーシスタンスの使用"
+msgstr "Quarkus - Blaze-Persistenceの使用"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:13
-#, fuzzy
 msgid ""
 "Blaze-Persistence offers a fluent query builder API on top of JPA with a "
 "deep Hibernate ORM integration that enables the use of advanced SQL features "
 "like Common Table Expressions while staying in the realm of the JPA model."
 msgstr ""
-"Blaze-Persistenceは、JPAモデルの範囲内でありながら、共通テーブル式のような高度なSQL機能の使用を可能にするHibernate "
-"ORMとの深い統合により、JPAの上に流暢なクエリビルダAPIを提供しています。"
+"Blaze-Persistenceは、Hibernate ORMとの深い統合により、JPAの上に流れるようなク"
+"エリビルダAPIを提供し、JPAモデルの範囲内でありながら、共通テーブル式のような"
+"高度なSQL機能の使用を可能にします。"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:18
-#, fuzzy
 msgid ""
 "On top of that, the Blaze-Persistence Entity-View module allows for DTO "
 "definitions that can be applied to business logic queries which are then "
@@ -47,18 +46,20 @@ msgid ""
 "for applying database updates, leading to a great reduction in boilerplate "
 "code and removing the need for object mapping tools."
 msgstr ""
-"さらに、Blaze-Persistence Entity-"
-"Viewモジュールでは、DTO定義をビジネスロジッククエリに適用し、DTOインスタンスを構築するために必要なデータのみを取得する最適化されたクエリに変換することができます。同じDTO定義をデータベースの更新にも使用することができます。これにより、ボイラプレートコードが大幅に削減され、オブジェクトマッピングツールの必要性がなくなります。"
+"さらに、Blaze-Persistence Entity-Viewモジュールは、ビジネスロジッククエリに適"
+"用出来るDTO定義を可能にし、そのクエリはDTOインスタンスを構築するために必要な"
+"データのみを取得する最適化されたクエリに変換されます。同じDTO定義をデータベー"
+"スの更新にも使用することができます。これにより、ボイラプレートコードが大幅に"
+"削減され、オブジェクトマッピングツールの必要性がなくなります。"
 
 #. type: Title ==
 #: upstream/_guides/blaze-persistence.adoc:21
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Setting up and configuring Blaze-Persistence"
-msgstr "Blaze-Persistenceの設定と設定"
+msgstr "Blaze-Persistenceの設定"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:27
-#, fuzzy
 msgid ""
 "The extension comes with default producers for `CriteriaBuilderFactory` and "
 "`EntityViewManager` that work out of the box given a working Hibernate ORM "
@@ -69,84 +70,82 @@ msgid ""
 "documentation/entity-view/manual/en_US/index.html#anchor-configuration-"
 "properties[Blaze-Persistence properties]."
 msgstr ""
-"このエクステンションには、 `CriteriaBuilderFactory` と `EntityViewManager` "
-"のデフォルトのプロデューサが付属しており、動作する Hibernate ORM 設定があればすぐに動作します。カスタマイズのために、 link:"
-"{quarkus-home-url}/guides/cdi-reference#default_beans[Quarkus "
-"CDIリファレンス]に記載されている標準的なメカニズムを使用して、デフォルトのプロデューサをオーバーライドすることができます。これは、カスタムのB "
-"link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/"
-"index.html#anchor-configuration-properties[laze-"
-"Persistenceプロパティを]設定する必要がある場合に必要です。"
+"このエクステンションには、 `CriteriaBuilderFactory` と `EntityViewManager` の"
+"デフォルトのプロデューサーが付属しており、動作する Hibernate ORM 設定があれば"
+"すぐに動作します。カスタマイズのために、 link:{quarkus-home-url}/guides/cdi-"
+"reference#default_beans[Quarkus CDIリファレンス]に記載されている標準的なメカ"
+"ニズムを使用して、デフォルトのプロデューサーをオーバーライドすることができま"
+"す。これは、カスタムの link:https://persistence.blazebit.com/documentation/"
+"entity-view/manual/en_US/index.html#anchor-configuration-properties[Blaze-"
+"Persistenceプロパティ]を設定する場合に必要です。"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:29
-#, fuzzy
 msgid "In Quarkus, you just need to:"
-msgstr "クオークスでは"
+msgstr "Quarkusでは、以下を実施するだけです："
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:31
-#, fuzzy
 msgid "`@Inject` `CriteriaBuilderFactory` or `EntityViewManager` and use it"
-msgstr "`@Inject` `CriteriaBuilderFactory` または `EntityViewManager` を使用して"
+msgstr ""
+"`CriteriaBuilderFactory` または `EntityViewManager` を `@Inject` し、使用しま"
+"す"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:32
-#, fuzzy
 msgid ""
 "annotate your entity views with `@EntityView` and any other mapping "
 "annotation as usual"
-msgstr "エンティティビューに `@EntityView` やその他のマッピングアノテーションを通常通りにアノテーションします。"
+msgstr ""
+"エンティティビューに `@EntityView` やその他のマッピングアノテーションを通常通"
+"りに付与します"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:34
-#, fuzzy
 msgid "Add the following dependencies to your project:"
-msgstr "以下の依存関係をプロジェクトに追加します。"
+msgstr "以下の依存関係をプロジェクトに追加してください："
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:36
-#, fuzzy
 msgid ""
 "the Blaze-Persistence extension: `com.blazebit:blaze-persistence-integration-"
 "quarkus`"
 msgstr ""
-"ブレイズ・パーシスタンスエクステンション。 `com.blazebit:blaze-persistence-integration-quarkus`"
+"Blaze-Persistence エクステンション： `com.blazebit:blaze-persistence-"
+"integration-quarkus`"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:37
-#, fuzzy
 msgid "further Blaze-Persistence integrations as needed:"
-msgstr "必要に応じて、さらにBlaze-Persistenceの統合を行います。"
+msgstr "必要に応じて、さらにBlaze-Persistenceの統合を行います："
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:38
-#, fuzzy
 msgid ""
 "`blaze-persistence-integration-jackson` for link:https://persistence."
-"blazebit.com/documentation/entity-view/manual/en_US/index."
-"html#Jackson%20integration[Jackson]"
+"blazebit.com/documentation/entity-view/manual/en_US/index.html#Jackson"
+"%20integration[Jackson]"
 msgstr ""
-"`blaze-persistence-integration-jackson`  link:https://persistence.blazebit."
-"com/documentation/entity-view/manual/en_US/index."
-"html#Jackson%20integration[ジャクソンさん]へ"
+"link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/"
+"index.html#Jackson%20integration[Jackson] の為に `blaze-persistence-"
+"integration-jackson` "
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:39
-#, fuzzy
 msgid ""
 "`blaze-persistence-integration-jaxrs` for link:https://persistence.blazebit."
 "com/documentation/entity-view/manual/en_US/index.html#jaxrs-integration[JAX-"
 "RS]"
 msgstr ""
-"`blaze-persistence-integration-jaxrs`  link:https://persistence.blazebit.com/"
-"documentation/entity-view/manual/en_US/index.html#jaxrs-integration[JAX-"
-"RS]について"
+"link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/"
+"index.html#jaxrs-integration[JAX-RS]の為に `blaze-persistence-integration-"
+"jaxrs`"
 
 #. type: Block title
 #: upstream/_guides/blaze-persistence.adoc:42
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Example dependencies using Maven"
-msgstr "Mavenを使った依存関係の例"
+msgstr "Mavenの場合の依存関係の例"
 
 #. type: delimited block -
 #: upstream/_guides/blaze-persistence.adoc:56
@@ -168,12 +167,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:59
-#, fuzzy
 msgid ""
 "The use in native images requires a dependency on the entity view annotation "
 "processor that may be extracted into a separate `native` profile:"
 msgstr ""
-"ネイティブ画像での使用には、別の `native` プロファイルに抽出される可能性のあるエンティティビュー注釈プロセッサへの依存性が必要です。"
+"ネイティブイメージでの使用には、別の `native` プロファイルに抽出される可能性"
+"のあるエンティティビューアノテーションプロセッサへの依存関係が必要です："
 
 #. type: delimited block -
 #: upstream/_guides/blaze-persistence.adoc:74
@@ -185,8 +184,7 @@ msgid ""
 "        <dependencies>\n"
 "            <dependency>\n"
 "                <groupId>com.blazebit</groupId>\n"
-"                <artifactId>blaze-persistence-entity-view-processor</"
-"artifactId>\n"
+"                <artifactId>blaze-persistence-entity-view-processor</artifactId>\n"
 "                <scope>provided</scope>\n"
 "            </dependency>\n"
 "        </dependencies>\n"
@@ -196,7 +194,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:77
-#, fuzzy
 msgid ""
 "A `CriteriaBuilderFactory` and an `EntityViewManager` will be created based "
 "on the configured `EntityManagerFactory` as provided by the link:{quarkus-"
@@ -208,13 +205,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:79
-#, fuzzy
 msgid "You can then access these beans via injection:"
-msgstr "その後、注入によってこれらの豆にアクセスすることができます。"
+msgstr "その後、注入によってこれらのBeanにアクセスすることができます："
 
 #. type: Block title
 #: upstream/_guides/blaze-persistence.adoc:81
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Example application bean using Hibernate"
 msgstr "Hibernateを使用したアプリケーションBeanの例"
 
@@ -239,41 +235,38 @@ msgid ""
 "    @Transactional <4>\n"
 "    public List<GiftView> findAllGifts() {\n"
 "        CriteriaBuilder<Gift> cb = cbf.create(em, Gift.class);\n"
-"        return evm.applySetting(EntityViewSetting.create(GiftView.class), "
-"cb).getResultList();\n"
+"        return evm.applySetting(EntityViewSetting.create(GiftView.class), cb).getResultList();\n"
 "    }\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:101
-#, fuzzy
 msgid "Inject the `EntityManager`"
-msgstr "を注入します。 `EntityManager`"
+msgstr "`EntityManager` を注入"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:102
-#, fuzzy
 msgid "Inject the `CriteriaBuilderFactory`"
-msgstr "を注入します。 `CriteriaBuilderFactory`"
+msgstr "`CriteriaBuilderFactory` を注入"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:103
-#, fuzzy
 msgid "Inject the `EntityViewManager`"
-msgstr "を注入します。 `EntityViewManager`"
+msgstr "`EntityViewManager` を注入"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:104
-#, fuzzy
 msgid ""
 "Mark your CDI bean method as `@Transactional` so that a transaction is "
 "started or joined."
-msgstr "トランザクションが開始または参加されるように、CDIビーンメソッドを `@Transactional` としてマークします。"
+msgstr ""
+"トランザクションが開始またはトランザクションに参加されるように、CDI Beanメ"
+"ソッドを `@Transactional` としてマークします。"
 
 #. type: Block title
 #: upstream/_guides/blaze-persistence.adoc:106
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Example Entity"
 msgstr "エンティティの例"
 
@@ -292,8 +285,7 @@ msgstr ""
 #: upstream/_guides/blaze-persistence.adoc:118
 #, no-wrap
 msgid ""
-"    @Id @GeneratedValue(strategy = GenerationType.SEQUENCE, generator="
-"\"giftSeq\")\n"
+"    @Id @GeneratedValue(strategy = GenerationType.SEQUENCE, generator=\"giftSeq\")\n"
 "    public Long getId() {\n"
 "        return id;\n"
 "    }\n"
@@ -302,7 +294,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/blaze-persistence.adoc:122
 #, no-wrap
-msgid "    public void setId(Long id) {\n"
+msgid ""
+"    public void setId(Long id) {\n"
 "        this.id = id;\n"
 "    }\n"
 msgstr ""
@@ -310,7 +303,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/blaze-persistence.adoc:126
 #, no-wrap
-msgid "    public String getName() {\n"
+msgid ""
+"    public String getName() {\n"
 "        return name;\n"
 "    }\n"
 msgstr ""
@@ -345,34 +339,37 @@ msgstr ""
 
 #. type: Block title
 #: upstream/_guides/blaze-persistence.adoc:143
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Example Entity-View"
 msgstr "エンティティビューの例"
 
 #. type: delimited block -
 #: upstream/_guides/blaze-persistence.adoc:147
 #, no-wrap
-msgid "@EntityView(Gift.class)\n"
+msgid ""
+"@EntityView(Gift.class)\n"
 "public interface GiftView {\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/blaze-persistence.adoc:150
 #, no-wrap
-msgid "    @IdMapping\n"
+msgid ""
+"    @IdMapping\n"
 "    Long getId();\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/blaze-persistence.adoc:153
 #, no-wrap
-msgid "    String getName();\n"
+msgid ""
+"    String getName();\n"
 "}\n"
 msgstr ""
 
 #. type: Block title
 #: upstream/_guides/blaze-persistence.adoc:156
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Example updatable Entity-View"
 msgstr "更新可能なEntity-Viewの例"
 
@@ -389,13 +386,14 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/blaze-persistence.adoc:165
 #, no-wrap
-msgid "    void setName(String name);\n"
+msgid ""
+"    void setName(String name);\n"
 "}\n"
 msgstr ""
 
 #. type: Block title
 #: upstream/_guides/blaze-persistence.adoc:168
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Example JAX-RS Resource"
 msgstr "JAX-RSリソースの例"
 
@@ -421,8 +419,7 @@ msgid ""
 "    @Transactional\n"
 "    public Response createGift(GiftUpdateView view) {\n"
 "        entityViewManager.save(entityManager, view);\n"
-"        return Response.created(URI.create(\"/gifts/\" + view.getId()))."
-"build();\n"
+"        return Response.created(URI.create(\"/gifts/\" + view.getId())).build();\n"
 "    }\n"
 msgstr ""
 
@@ -458,70 +455,70 @@ msgid ""
 "    @GET\n"
 "    @Produces(MediaType.APPLICATION_JSON)\n"
 "    public GiftView getGift(@PathParam(\"id\") Long id) {\n"
-"        return return entityViewManager.find(entityManager, GiftView.class, "
-"view.getId());\n"
+"        return return entityViewManager.find(entityManager, GiftView.class, view.getId());\n"
 "    }\n"
 "}\n"
 msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/blaze-persistence.adoc:210
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Blaze-Persistence configuration properties"
 msgstr "Blaze-Persistenceの設定プロパティ"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:213
-#, fuzzy
 msgid ""
 "There are various optional properties useful to refine your "
 "`EntityViewManager` and `CriteriaBuilderFactory` or guide guesses of Quarkus."
-""
 msgstr ""
-"`EntityViewManager` と `CriteriaBuilderFactory` "
-"、またはQuarkusのガイド推測を洗練させるのに便利な様々なオプションのプロパティがあります。"
+"`EntityViewManager` と `CriteriaBuilderFactory` を洗練させたり、またはQuarkus"
+"の推測をガイドするのに便利な様々なオプションのプロパティがあります。"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:215
-#, fuzzy
 msgid ""
 "There are no required properties, as long as the Hibernate ORM extension is "
 "configured properly."
-msgstr "Hibernate ORM拡張が適切に設定されている限り、必須のプロパティはありません。"
+msgstr ""
+"Hibernate ORMエクステンションが適切に設定されている限り、必須のプロパティはあ"
+"りません。"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:217
-#, fuzzy
 msgid "When no property is set, the Blaze-Persistence defaults apply."
-msgstr "プロパティが設定されていない場合は、Blaze-Persistenceのデフォルトが適用されます。"
+msgstr ""
+"プロパティが設定されていない場合は、Blaze-Persistenceのデフォルトが適用されま"
+"す。"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:219
-#, fuzzy
 msgid ""
 "The configuration properties listed here allow you to override such "
 "defaults, and customize and tune various aspects."
-msgstr "ここに記載されている設定プロパティでは、このようなデフォルトを上書きしたり、様々な面をカスタマイズしたり調整したりすることができます。"
+msgstr ""
+"ここに記載されている設定プロパティでは、このようなデフォルトを上書きしたり、"
+"様々な面をカスタマイズしたり調整したりすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/blaze-persistence.adoc:222
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Limitations"
-msgstr "制限事項"
+msgstr "制約事項"
 
 #. type: Labeled list
 #: upstream/_guides/blaze-persistence.adoc:224
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Apache Derby"
-msgstr "アパッチダービー"
+msgstr "Apache Derby"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:226
-#, fuzzy
 msgid ""
 "Blaze-Persistence currently does not come with support for Apache Derby.  "
 "This limitation could be lifted in the future, if there's a compelling need "
 "for it and if someone contributes it."
 msgstr ""
-"Blaze-Persistenceは現在、Apache "
-"Derbyをサポートしていません。この制限は、将来的には、必要性があり、誰かが貢献してくれれば、解除されるかもしれません。"
+"Blaze-Persistenceは現在、Apache Derbyをサポートしていません。切実なニーズが存"
+"在し、誰かがコントリビュートしてくれれば、この制限は、将来的には解除されるか"
+"もしれません。"
