Add machine translations

--- a/i18n/po/ja_JP/_guides/amazon-iam.adoc.po
+++ b/i18n/po/ja_JP/_guides/amazon-iam.adoc.po
@@ -2,18 +2,18 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:10+0900\n"
+"POT-Creation-Date: 2021-01-15 15:29+0000\n"
 "PO-Revision-Date: 2021-01-15 15:30+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
@@ -31,8 +31,8 @@ msgid ""
 "Amazon Identity and Access Management (IAM) enables users to manage access "
 "to AWS services and resources securely."
 msgstr ""
-"Amazon Identity and Access Management（IAM）は、ユーザーがAWSのサービスやリ"
-"ソースへのアクセスを安全に管理できるようにします。"
+"Amazon Identity and Access "
+"Management（IAM）は、ユーザーがAWSのサービスやリソースへのアクセスを安全に管理できるようにします。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:14
@@ -40,8 +40,7 @@ msgid ""
 "You can find more information about IAM at https://aws.amazon.com/iam/[the "
 "Amazon IAM website]."
 msgstr ""
-"link:https://aws.amazon.com/iam/[アマゾンのIAMのサイト]を見てみると、IAMにつ"
-"いての詳しい情報が掲載されています。"
+"link:https://aws.amazon.com/iam/[アマゾンのIAMのサイト]を見てみると、IAMについての詳しい情報が掲載されています。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:17
@@ -50,16 +49,14 @@ msgid ""
 "developer-guide/welcome.html[AWS Java SDK 2.x].  It's a major rewrite of the "
 "1.x code base that offers two programming models (Blocking & Async)."
 msgstr ""
-"IAMエクステンションは link:https://docs.aws.amazon.com/sdk-for-java/v2/"
-"developer-guide/welcome.html[AWS Java SDK 2.x]をベースにしており、2つのプログ"
-"ラミングモデル(Blocking & Async)を提供する1.xのコードベースを大幅に書き換えて"
-"います。"
+"IAMエクステンションは link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-"
+"guide/welcome.html[AWS Java SDK 2.x]をベースにしており、2つのプログラミングモデル(Blocking & "
+"Async)を提供する1.xのコードベースを大幅に書き換えています。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:21
 msgid "The Quarkus extension supports two programming models:"
-msgstr ""
-"Quarkusエクステンションは、2つのプログラミングモデルをサポートしています："
+msgstr "Quarkusエクステンションは、2つのプログラミングモデルをサポートしています："
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:23
@@ -67,8 +64,7 @@ msgid ""
 "Blocking access using URL Connection HTTP client (by default) or the Apache "
 "HTTP Client"
 msgstr ""
-"URL Connection HTTP クライアント (デフォルト) または Apache HTTP クライアント"
-"を使ったブロッキングアクセス"
+"URL Connection HTTP クライアント (デフォルト) または Apache HTTP クライアントを使ったブロッキングアクセス"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:24
@@ -77,6 +73,5 @@ msgid ""
 "html[Asynchronous programming] based on JDK's `CompletableFuture` objects "
 "and the Netty HTTP client."
 msgstr ""
-"JDK の `CompletableFuture` オブジェクトと Netty HTTP クライアントをベースにし"
-"た link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/basics-"
-"async.html[非同期プログラミング]"
+"JDK の `CompletableFuture` オブジェクトと Netty HTTP クライアントをベースにした link:https://docs."
+"aws.amazon.com/sdk-for-java/v2/developer-guide/basics-async.html[非同期プログラミング]"
