--- a/i18n/po/ja_JP/_guides/camel.adoc.po
+++ b/i18n/po/ja_JP/_guides/camel.adoc.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:10+0900\n"
+"POT-Creation-Date: 2021-01-15 15:29+0000\n"
 "PO-Revision-Date: 2021-01-15 14:11+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"Language: ja_JP\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -33,9 +33,8 @@ msgid ""
 "heterogeneous systems with more than a decade of history and a lively "
 "community of users and developers."
 msgstr ""
-"link:http://camel.apache.org/[Apache Camel]は、10年以上の歴史とユーザーや開"
-"発者の活発なコミュニティを持つ、異種システムを統合するためのスイスアーミーナ"
-"イフです。"
+"link:http://camel.apache.org/[Apache "
+"Camel]は、10年以上の歴史とユーザーや開発者の活発なコミュニティを持つ、異種システムを統合するためのスイスアーミーナイフです。"
 
 #. type: Plain text
 #: upstream/_guides/camel.adoc:15
@@ -46,6 +45,5 @@ msgid ""
 "more information."
 msgstr ""
 "Quarkus上のApache Camelのサポートは、 link:https://github.com/apache/camel-"
-"quarkus[Apache Camel Quarkusプロジェクト]によって提供されています。詳細は "
-"link:https://camel.apache.org/camel-quarkus/latest/[彼らのドキュメント]を参"
-"照してください。"
+"quarkus[Apache Camel Quarkusプロジェクト]によって提供されています。詳細は link:https://camel."
+"apache.org/camel-quarkus/latest/[彼らのドキュメント]を参照してください。"
