Translate building-substrate-howto

--- a/i18n/po/ja_JP/_guides/building-substrate-howto.adoc.po
+++ b/i18n/po/ja_JP/_guides/building-substrate-howto.adoc.po
@@ -2,81 +2,75 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-16 14:10+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/building-substrate-howto.adoc:6
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Quarkus - Building a Custom SubstrateVM"
 msgstr "Quarkus - カスタムSubstrateVMの構築"
 
 #. type: Title ==
 #: upstream/_guides/building-substrate-howto.adoc:10
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Prerequisites"
 msgstr "前提条件"
 
 #. type: Title ===
 #: upstream/_guides/building-substrate-howto.adoc:12
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Install JVMCI"
 msgstr "JVMCI のインストール"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:15
-#, fuzzy
 msgid "Before anything can be done you must first install a JVMCI build."
 msgstr "何かをする前に、まずJVMCIビルドをインストールしなければなりません。"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:18
-#, fuzzy
 msgid ""
 "These can be downloaded from OTN http://www.oracle.com/technetwork/oracle-"
 "labs/program-languages/downloads/index.html[here]"
 msgstr ""
-"これらは link:http://www.oracle.com/technetwork/oracle-labs/program-languages/"
-"downloads/index.html[ここで]OTNからダウンロードすることができます"
+"これらは link:http://www.oracle.com/technetwork/oracle-labs/program-"
+"languages/downloads/index.html[ここ]でOTNからダウンロードすることができます"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:22
-#, fuzzy
 msgid ""
 "Note, if you are installing on an alternative system, you can use the "
 "developer tools on chrome or firefox to capture a direct URL with an auth "
 "param."
 msgstr ""
-"別のシステムにインストールしている場合は、クロームやファイアフォックスの開発者ツールを使用して、auth パラメーターを指定して直接 URL "
-"をキャプチャすることができます。"
+"別のシステムにインストールする場合は、ChromeやFirefoxの開発者ツールを使用し"
+"て、auth パラメーターを指定して直接 URL をキャプチャすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:24
-#, fuzzy
 msgid "After obtaining the download install it and set `JAVA_HOME`"
-msgstr "ダウンロードした後、インストールして `JAVA_HOME`"
+msgstr "ダウンロードした後、インストールして `JAVA_HOME` をセットします"
 
 #. type: delimited block -
 #: upstream/_guides/building-substrate-howto.adoc:32
 #, no-wrap
 msgid ""
-"wget -O jvmci.tgz http://download.oracle.com/otn/utilities_drivers/oracle-"
-"labs/labsjdk-8u202-jvmci-0.56-darwin-amd64.tar.gz?AuthParam=[GENERATED AUTH "
-"TOKEN HERE]\n"
+"wget -O jvmci.tgz http://download.oracle.com/otn/utilities_drivers/oracle-labs/labsjdk-8u202-jvmci-0.56-darwin-amd64.tar.gz?AuthParam=[GENERATED AUTH TOKEN HERE]\n"
 "tar -xzvf jvmci.tgz -C /opt\n"
 "# On Mac do labsjdk1.8.0_202-jvmci-0.56/Contents/Home\n"
 "export JAVA_HOME=/opt/labsjdk1.8.0_202-jvmci-0.46/\n"
@@ -85,29 +79,29 @@ msgstr ""
 
 #. type: Block title
 #: upstream/_guides/building-substrate-howto.adoc:34
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "NOTE"
-msgstr "ノート"
+msgstr "NOTE"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:37
-#, fuzzy
 msgid ""
 "Get the latest version available as graal tends to keep updating the minimum "
 "requirements."
-msgstr "graalは最低限の要件を更新し続ける傾向があるので、最新版を入手しましょう。"
+msgstr "graalは最小要件を更新し続ける傾向があるので、最新版を入手しましょう。"
 
 #. type: Title ===
 #: upstream/_guides/building-substrate-howto.adoc:38
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Install MX"
 msgstr "MXのインストール"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:41
-#, fuzzy
 msgid "Now you need to install Graal’s special build tool, `mx`."
-msgstr "今、あなたはGraalの特別なビルドツールをインストールする必要があります、 `mx`."
+msgstr ""
+"今、あなたはGraalの特別なビルドツール `mx` をインストールする必要がありま"
+"す、."
 
 #. type: delimited block -
 #: upstream/_guides/building-substrate-howto.adoc:46
@@ -119,7 +113,7 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/building-substrate-howto.adoc:48
-#, no-wrap, fuzzy
+#, fuzzy, no-wrap
 msgid "Checkout and build SubstrateVM"
 msgstr "SubstrateVMのチェックアウトとビルド"
 
@@ -148,8 +142,7 @@ msgstr "一度構築したら、その場でツールを素早く実行するこ
 #: upstream/_guides/building-substrate-howto.adoc:67
 #, no-wrap
 msgid ""
-"echo \"public class HelloWorld { public static void main(String[] args) { "
-"System.out.println(\\\"Hello World\\\"); } }\" > HelloWorld.java\n"
+"echo \"public class HelloWorld { public static void main(String[] args) { System.out.println(\\\"Hello World\\\"); } }\" > HelloWorld.java\n"
 "javac HelloWorld.java\n"
 "mx native-image HelloWorld\n"
 "./helloworld\n"
@@ -157,7 +150,7 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/building-substrate-howto.adoc:69
-#, no-wrap, fuzzy
+#, fuzzy, no-wrap
 msgid "Building a custom GraalVM distribution"
 msgstr "カスタムGraalVMディストリビューションの構築"
 
@@ -169,7 +162,9 @@ msgid ""
 "quarkus) you must switch to the vm subdirectory, and use special build "
 "options to pick the modules in your distribution."
 msgstr ""
-"カスタムGraalVMディストリビューションを作成するためには、(quarkusで使用するために必要な)vmサブディレクトリに切り替えて、特別なビルドオプションを使用して、ディストリビューションのモジュールを選択する必要があります。"
+"カスタムGraalVMディストリビューションを作成するためには、(quarkusで使用するた"
+"めに必要な)vmサブディレクトリに切り替えて、特別なビルドオプションを使用して、"
+"ディストリビューションのモジュールを選択する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:77
@@ -177,7 +172,9 @@ msgstr ""
 msgid ""
 "For a simple subset VM with just substrate and its native tools execute the "
 "following:"
-msgstr "基板とそのネイティブツールだけのシンプルなサブセット VM の場合は、以下を実行します。"
+msgstr ""
+"基板とそのネイティブツールだけのシンプルなサブセット VM の場合は、以下を実行"
+"します。"
 
 #. type: delimited block -
 #: upstream/_guides/building-substrate-howto.adoc:83
